--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,18 +17,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GreenPulse"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".weatherItem"
+            android:name=".GeminiActivity"
             android:exported="false" />
         <activity
-            android:name=".StartingActivity"
+            android:name=".MapActivity"
             android:exported="false" />
         <activity
-            android:name=".OnBoardActivity"
-            android:exported="true" />
+            android:name=".SearchActivity"
+            android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".DiseaseAnalyzeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,17 +38,36 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".StartingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OnBoardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".loginPage"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ForgotPassword"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".registerpage"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/my_api_key" />
     </application>
 
 </manifest>
