--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".BotActivity"
+            android:exported="true" >
+        </activity>
+        <activity
             android:name=".GeminiActivity"
             android:exported="false" />
         <activity
             android:name=".MapActivity"
-            android:exported="true" >
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -34,11 +41,7 @@
         <activity
             android:name=".DiseaseAnalyzeActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".StartingActivity"
@@ -51,9 +54,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".loginPage"
             android:exported="true" />
@@ -62,7 +63,10 @@
             android:exported="true" />
         <activity
             android:name=".registerpage"
-            android:exported="true" />
+            android:exported="true" >
+
+
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
